feat: versión previa presentación (frontend-admin, frontend-cliente y backend)